--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@emotion/css": "^11.11.2",
     "next": "14.0.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
