--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "usehooks-ts": "^2.12.1"
   },
   "devDependencies": {
+    "@tailwindcss/line-clamp": "^0.4.4",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
